--- a/year1/learning html and css/platformer/BGstyle.css
+++ b/year1/learning html and css/platformer/BGstyle.css
@@ -17,3 +17,14 @@ body{
     top: 50%;
     left: 50%;  
 }
+.controls{
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 3%;
+    color: white;
+    font-size: 90px;
+    padding: 20px;
+}
+#animations{
+    font-size: 70px;
+}
