--- a/year1/learning html and css/style.css
+++ b/year1/learning html and css/style.css
@@ -1,74 +1,68 @@
 body {
   background: linear-gradient(
-    rgb(31, 37, 63),
     rgb(67, 95, 112),
     rgb(67, 95, 112),
     rgb(245, 151, 63)
   );
-  justify-content: center;
   height: 98vh;
-  align-items: center;
+}
+.content {
+  margin-top: 120px;
 }
 .list li {
+  align-items: center;
   display: inline;
   padding-left: 7%;
   padding-right: 7%;
   color: rgba(240, 248, 255, 0.596);
-  font-size: 100%;
+  font-size: 28px;
 }
 .list li:hover {
   color: rgb(236, 121, 44);
-  font-size: 110%;
+  font-size: 29px;
+  background-color: rgba(236, 121, 44, 0.075);
 }
 .forgotpassword {
   padding-top: 20px;
   font-size: 18px;
 }
 input {
-  font-size: 25px;
-  margin-top: 0.5em;
+  font-size: 2px;
   text-align: center;
-  color: aliceblue;
-  background-color: rgba(255, 255, 255, 0.301);
+  background-color: rgba(255, 255, 255, 0.156);
   border-color: rgba(250, 235, 215, 0);
-  border-radius: 0.25em;
-  height: 1.6em;
 }
 .greetings {
   color: aliceblue;
   font-size: 100px;
   text-align: center;
+  padding-bottom: 100px;
 }
 .user {
+  color: aliceblue;
   font-size: 35px;
   text-align: center;
   padding-bottom: 10px;
 }
 
-.loginCard {
-  position: relative;
-  background-color: rgba(0, 0, 0, 0.597);
-  width: fit-content;
-  height: fit-content;
+.password {
+  color: aliceblue;
   font-size: 35px;
-  padding-top: 2%;
-  padding-bottom: 1%;
-  padding-left: 2%;
-  padding-right: 2%;
+  padding-top: 10px;
+  padding-bottom: 30px;
   text-align: center;
-  border-radius: 4%;
 }
 
 .login {
-  text-align: center;
+  margin-left: 44%;
   padding-left: 50px;
   padding-right: 50px;
   font-size: 35px;
   background-color: rgb(236, 121, 44);
   color: white;
-  position: relative;
-  border: none;
-  border-radius: 0.35em;
+  position: absolute;
+  border-color: rgba(245, 245, 220, 0);
+  border-radius: 11%;
 }
 
 .login:hover {
@@ -80,9 +74,5 @@ input {
 }
 
 input:hover {
-  background-color: rgba(255, 255, 255, 0.651);
-}
-
-input:focus {
-  outline-color: rgba(245, 222, 179, 0);
+  background-color: rgba(255, 255, 255, 0.456);
 }
