--- a/year1/learning html and css/webDev/react/my-app/src/index.css
+++ b/year1/learning html and css/webDev/react/my-app/src/index.css
@@ -91,7 +91,7 @@ input:focus {
 }
 
 .error {
-  font-size: 50%;
+  font-size: 95%;
   color: rgb(248, 0, 0);
   background-color: rgba(255, 0, 0, 0.288);
   width: 300px;
@@ -101,4 +101,48 @@ input:focus {
 .horizontalLine{
   margin-top: -20px;
   width: 19.7em;
+}
+
+.ProfilePage{
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+}
+.details{
+  margin-top: 6em;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  color: rgb(176, 183, 189);
+  font-size: 25px;
+  background-color: rgba(14, 14, 14, 0.788);
+  width: fit-content;
+  height: fit-content;
+  padding-top: 2%;
+  padding-bottom: 3%;
+  padding-left: 2%;
+  padding-right: 2%;
+  border-radius: 4%;
+}
+
+.profile{
+  background-color: rgb(40, 97, 97);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  text-align: center;
+  width: 3em;
+  height: 3em;
+  color: rgb(218, 218, 218);
+  border-radius: 50em;
+}
+.profilelogout{
+  margin-top: 7.36em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 2em;
 }
