--- a/year1/learning html and css/webDev/react/my-app/src/index.css
+++ b/year1/learning html and css/webDev/react/my-app/src/index.css
@@ -3,10 +3,11 @@ body {
   background-size: cover;
   height: 96vh;
 }
-.loginForm{
+.loginForm {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 .list li {
   display: inline;
@@ -23,7 +24,7 @@ body {
   padding-top: 20px;
   font-size: 18px;
 }
-input {
+.input {
   font-size: 25px;
   margin-top: 0.5em;
   text-align: center;
@@ -46,7 +47,7 @@ input {
 }
 
 .loginCard {
-  margin-top: 6em;
+  margin-top: 1em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -82,7 +83,7 @@ input {
   color: white;
 }
 
-input:hover {
+.input:hover {
   background-color: rgba(255, 255, 255, 0.651);
 }
 
@@ -98,24 +99,65 @@ input:focus {
   height: fit-content;
   padding: 2%;
 }
-.horizontalLine{
+.horizontalLine {
   margin-top: -20px;
   width: 19.7em;
 }
 
-.ProfilePage{
+.ProfilePage {
+  margin-top: 1em;
   display: flex;
   justify-content: center;
-  align-items: center;  
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(14, 14, 14, 0.788);
+  width: 22em;
+  height: fit-content;
+  padding-top: 2%;
+  padding-bottom: 3%;
+  padding-left: 2.8%;
+  padding-right: 2.8%;
+  border-radius: 4%;
 }
-.details{
-  margin-top: 6em;
+.details {
+  margin-top: 1em;
   display: flex;
   justify-content: center;
   flex-direction: column;
   position: relative;
-  color: rgb(176, 183, 189);
-  font-size: 25px;
+  color: rgb(255, 255, 255);
+  font-size: 1.5em;
+  background-color: rgba(10, 10, 10, 0.918);
+  width: 14em;
+  height: fit-content;
+  padding: 5%;
+  border-radius: 4%;
+}
+
+.profile {
+  font-size: 3em;
+  background-color: rgb(40, 97, 97);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  text-align: center;
+  width: 2.5em;
+  height: 2.5em;
+  color: rgb(218, 218, 218);
+  border-radius: 50em;
+}
+.profilelogout {
+  margin-top: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 0.1em;
+}
+
+.RegisterationForm {
+  margin-top: 0.2em;
   background-color: rgba(14, 14, 14, 0.788);
   width: fit-content;
   height: fit-content;
@@ -123,26 +165,106 @@ input:focus {
   padding-bottom: 3%;
   padding-left: 2%;
   padding-right: 2%;
-  border-radius: 4%;
+  border-radius: 2em;
+  color: rgb(121, 128, 134);
 }
 
-.profile{
-  background-color: rgb(40, 97, 97);
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  position: relative;
+.back {
+  margin-left: 17em;
   text-align: center;
-  width: 3em;
-  height: 3em;
-  color: rgb(218, 218, 218);
-  border-radius: 50em;
+
+  font-size: 15px;
+  width: 2.7em;
+  height: 2.7em;
+  background-color: rgb(236, 121, 44);
+  color: white;
+  position: relative;
+  border: none;
+  border-radius: 2em;
 }
-.profilelogout{
-  margin-top: 7.36em;
+
+.back:hover {
+  background-color: rgb(91, 194, 172);
+}
+
+.inputRow {
+  padding-top: 1%;
+  display: flex;
+  flex-direction: column;
+  font-size: 1em;
+}
+
+.title {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  padding: 2em;
+  font-size: 1.3em;
+}
+
+text {
+  padding-right: 1em;
+}
+
+.registrationScreen {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.registerButton {
+  margin-top: 2em;
+  margin-left: 9.5em;
+  text-align: center;
+  padding-left: 0.3em;
+  padding-right: 0.3em;
+  font-size: 25px;
+  background-color: rgb(236, 121, 44);
+  color: white;
+  position: relative;
+  border: none;
+  border-radius: 0.35em;
+}
+
+.registerButton:hover {
+  background-color: rgb(91, 194, 172);
+}
+
+.logout {
+  margin-top: 1em;
+  text-align: center;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-size: 25px;
+  background-color: rgb(236, 121, 44);
+  color: white;
+  position: relative;
+  border: none;
+  border-radius: 0.35em;
+}
+
+.logout:hover {
+  background-color: rgb(91, 194, 172);
+}
+
+.profilePageScreen {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.submitButton {
+  margin-left: 35%;
+  margin-top: 5%;
+  text-align: center;
+  padding-left: 1em;
+  padding-right: 1em;
+  font-size: 25px;
+  background-color: rgb(236, 121, 44);
+  color: white;
+  position: relative;
+  border: none;
+  border-radius: 0.35em;
+}
+
+.RegisterationForm .input {
+  height: 1.2em;
 }
